--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "express-sessions": "^1.0.6",
     "massive": "^6.6.2",
+    "nexmo": "^2.9.1",
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
